--- a/index.html
+++ b/index.html
@@ -193,6 +193,20 @@
         
     </div>
     <!--backpack end-->
+    <!--subscribe section start-->
+    <div class="container d-flex justify-content-center align-items-center carousel-bg" id="subscribe">
+        <div>
+            <h3>LET'S STAY IN TOUCH</h3>
+            <h6>Get updates on sales, specials and more</h6>
+            <input class="form-control" type="text">
+            <button class="buy-now-button">Submit</button>
+        </div>
+    </div>
+    <!--subscribe section end-->
+    <footer>
+        <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+    </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
